--- a/view/cadastro_produto.html
+++ b/view/cadastro_produto.html
@@ -11,15 +11,14 @@
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.js"></script>
-
-    
-
     <title>Cadatro Produto</title>
 </head>
 <body>
     <form action="#" method="post">
         <div class="conteudo">
-            <h1>CADASTRO DE PRODUTO</h1>
+            <div class="topo_pedido">
+                <div class="top_m"><h1>CADASTRO DE PRODUTO</h1></div>
+            </div>
             <div class="grupo_btn">
                 <button type="button" class="btn_top_cadastro"><a href="../view/categoria.html" class="btn_a">CATEGORIA</a></button>
                 <button type="button" class="btn_top_cadastro"><a href="../view/cadastro_produto.html" class="btn_a">PRODUTO</a></button>
