--- a/css/cadatro_produto.css
+++ b/css/cadatro_produto.css
@@ -22,9 +22,9 @@
 hr{
     border-top: 2px dotted rgb(150, 150, 150);
 }
-h1{
+/* h1{
     text-align: center;
-}
+} */
 
 .btn_cadastro{
     margin-top: -2.91rem;
